--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ environment:
 dependencies:
   html: ^0.13.3+3
   http: ^0.12.0
+  json_annotation: ^0.2.3
   flutter:
     sdk: flutter
 
@@ -24,6 +25,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
+  json_serializable: ^0.5.4
   flutter_test:
     sdk: flutter
 
