--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -34,6 +36,7 @@ dev_dependencies:
   json_serializable: ^0.5.4
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -49,6 +52,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/KSU_on light backgrounds/KSU_PNG LOGO/
     - images/
   #  - images/a_dot_ham.jpeg
 
