--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   intl: ^0.16.1
   jiffy: ^3.0.1
   share: ^0.6.5
+  sqflite: ^1.3.1+2
+  path_provider: ^1.6.22
   flutter:
     sdk: flutter
 
