--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   share: ^0.6.5
   sqflite: ^1.3.1+2
   path_provider: ^1.6.22
+  firebase_messaging: ^7.0.3
   flutter:
     sdk: flutter
 
