--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   http: ^0.12.0
   json_annotation: ^0.2.3
   table_calendar: ^2.2.3
-  flutter_svg: ^0.19.0
   flutter_spinkit: ^4.1.2
   intl: ^0.16.1
   jiffy: ^3.0.1
@@ -25,6 +24,9 @@ dependencies:
   sqflite: ^1.3.1+2
   path_provider: ^1.6.22
   firebase_messaging: ^7.0.3
+
+  flutter_plugin_pdf_viewer: ^1.0.7
+
   flutter:
     sdk: flutter
 
@@ -35,7 +37,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.8.1
 
-
+dependency_overrides:
+  flutter_advanced_networkimage: ^0.5.0
+  flutter_svg: ^0.19.1
 dev_dependencies:
   json_serializable: ^0.5.4
   flutter_test:
