--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   sqflite: ^1.3.1+2
   path_provider: ^1.6.22
   firebase_messaging: ^7.0.3
-
+  url_launcher: ^5.4.2
   flutter_plugin_pdf_viewer: ^1.0.7
 
   flutter:
