--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   sqflite: ^1.3.1+2
   path_provider: ^1.6.22
   firebase_messaging: ^7.0.3
+  flutter_local_notifications: ^3.0.1+3
   url_launcher: ^5.4.2
   flutter_plugin_pdf_viewer: ^1.0.7
   add_2_calendar: ^1.4.0
