--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,5 +48,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Scrappy would like to access your calende</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Scrappy would like to access your calende</string>
 </dict>
 </plist>
