Update Favorite Service

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,9 +83,15 @@ flutter:
       fonts:
         - asset: fonts/Pacifico-Regular.ttf
 
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Black.ttf
+
     - family: SourceSans-Pro
       fonts:
         - asset: fonts/SourceSansPro-Regular.ttf
+
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
